examples/tests/compile_fail/semantic_undefined_variable_fail.zl
fun main() >> i32 {
    i32 x = y + 1;
    return x;
}
